responsive et corrections

--- a/note-enchanté.html
+++ b/note-enchanté.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="stylesheet"
@@ -101,7 +104,7 @@
               </div>
             </div>
           </a>
-          <a href="" class="items-menu m-item3">
+          <a href="" class="items-menu m-item4">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3>Foie gras de canard cuit entier</h3>
@@ -127,7 +130,7 @@
             </div>
             <div class="underline"></div>
           </div>
-          <a href="" class="items-menu m-item1">
+          <a href="" class="items-menu m-item5">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3 class="title-menu">Noix de coquilles Saint-Jacques</h3>
@@ -145,7 +148,7 @@
               </div>
             </div>
           </a>
-          <a href="" class="items-menu m-item2">
+          <a href="" class="items-menu m-item6">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3>Langoustine poêlée</h3>
@@ -163,7 +166,7 @@
               </div>
             </div>
           </a>
-          <a href="" class="items-menu m-item3">
+          <a href="" class="items-menu m-item7">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3>Mijoté de queue de boeuf</h3>
@@ -189,7 +192,7 @@
             </div>
             <div class="underline"></div>
           </div>
-          <a href="" class="items-menu m-item1">
+          <a href="" class="items-menu m-item8">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3 class="title-menu">Macaron noisette et chocolat</h3>
@@ -209,7 +212,7 @@
               </div>
             </div>
           </a>
-          <a href="" class="items-menu m-item2">
+          <a href="" class="items-menu m-item9">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3>Baba au rhum revisité</h3>
@@ -227,7 +230,7 @@
               </div>
             </div>
           </a>
-          <a href="" class="items-menu m-item3">
+          <a href="" class="items-menu m-item10">
             <div class="btn-text-case">
               <div class="name-menu">
                 <h3>Tarte au citron meringuée</h3>
