--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=0.9" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       media="screen and (min-width:900px) and  ( max-width: 1400px )"
@@ -66,7 +69,8 @@
             <a href="#" ><p>Explorer nos restaurants</p></a>
             </div>
         </div>
-    </section>
+      </section>
+      <section class="process-restaurants">
     <section class="process">
         <h2>Fonctionnement</h2>
         <div class="process-bloc">
@@ -135,7 +139,9 @@
 
         <a class="items item3" href="francaise.html">
           <div class="card-new">
-            <p class="new">Nouveau</p>
+            <div class="card-new">
+              <p></p>
+            </div>
           </div>
           <div class="text-case">
             <div class="text-case-text">
@@ -150,9 +156,7 @@
         </a>
 
         <a class="items item4" href="d.sens.html">
-          <div class="card-new">
-            <p class="new">Nouveau</p>
-          </div>
+          
           <div class="text-case">
             <div class="text-case-text">
               <h3 class="case-text-title">Le délice des sens<em></em></h3>
@@ -168,6 +172,7 @@
         
       </div>
     </section>
+  </section>
     <footer class="footer">
       <h3>ohmyfood</h3>
       <ul class="footer-list">
