--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
         </a>
 
-        <a class="items item3" href="francaise.html">
+        <a class="items item3" href="Francaise.html">
           <div class="card-new">
             <div class="card-new">
               <p></p>
