--- a/Francaise.html
+++ b/Francaise.html
@@ -11,7 +11,7 @@
     <link
       rel="stylesheet"
       media="screen and (min-width:900px) and  ( max-width: 1400px )"
-      href="width900px.css"
+      href="style.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
