--- a/P.gout.html
+++ b/P.gout.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <div class="card-menu">
-        <div class="card-img-text">
+        <div class="card-img-text" id="palettedugout">
           <div class="card-text-case ">
             <h2 class="card-title">La palette du goût</h2>
             <div id="icones-heart">
