--- a/d.sens.html
+++ b/d.sens.html
@@ -10,8 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
-      media="screen and (min-width:900px) and  ( max-width: 1400px )"
-      href="width900px.css"
+      media="screen and (min-width:960px) and  ( max-width: 1400px )"
+      href="style.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
