--- a/note-enchanté.html
+++ b/note-enchanté.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width:960px) and  ( max-width: 1400px )"
+      href="style.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width:1401px)"
+      href="style.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
