correction validateur html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
-      media="screen and (min-width:960px) and  ( max-width: 1400px )"
+      media="screen and (min-width:960px)"
+      href="style.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width:1401px) and  ( max-width: 1400px )"
       href="style.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -187,7 +192,7 @@
           </div>
         </a></li>
         <li class="footer_3" id="f-p"><a href="#"><p class="mentions">Mentions légales</p></a></li>
-        <li class="footer_4" id="f-p"><a href="#"><p class="mentions">Contact</p></a></li>
+        <li class="footer_4" id="f-p2"><a href="#"><p class="mentions">Contact</p></a></li>
       </ul>
 
     </footer>
