corrections animation coeur,input,taille des textes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="location">
         <div class="icon-location">
           <i class="fas fa-map-marker-alt"></i>
-          <p>Paris,Belleville</p>
+          <input placeholder="Paris,Belleville"></p>
         </div>
       </div>
       
