--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <div class="location">
         <div class="icon-location">
           <i class="fas fa-map-marker-alt"></i>
-          <input placeholder="Paris,Belleville"></p>
+          <input placeholder="Paris,Belleville"></input>
         </div>
       </div>
       
     </main>
     <section class="intro">
         <div class="blocs-intro">
-            <h1 class="title-intro">Réservez le menu qui vous convient</h1>
+            <h2 class="title-intro">Réservez le menu qui vous convient</h2>
             <p class="text-intro">Découvrez des restaurants d'éxception,<br>séléctionnés par nos soins</p>
             <div class="btn-intro">
             <a href="#" ><p>Explorer nos restaurants</p></a>
