--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="location">
         <div class="icon-location">
           <i class="fas fa-map-marker-alt"></i>
-          <input placeholder="Paris,Belleville"></input>
+          <input placeholder="Paris,Belleville">
         </div>
       </div>
       
@@ -74,8 +74,8 @@
         </div>
       </section>
       <section class="process-restaurants">
-    <section class="process">
         <h2>Fonctionnement</h2>
+    <section class="process">
         <div class="process-bloc">
           <div class="process-bloc-resto">
             <div class="btn">1</div>
