--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </section>
     <section class="process-restaurants">
-      <h2></h2>
+      <h6 class="none">""</h6>
       <section class="process">
         <h2>Fonctionnement</h2>
         <div class="process-bloc">
