--- a/note-enchanté.html
+++ b/note-enchanté.html
@@ -260,6 +260,7 @@
           </a>
         </section>
         <section class="search">
+          <h6 class="none">""</h6>
           <div class="btn-search">
             <a href="#"><p>Commander</p></a>
           </div>
