--- a/Francaise.html
+++ b/Francaise.html
@@ -8,11 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      media="screen and (min-width:960px) and  ( max-width: 1400px )"
-      href="style.css"
-    />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="stylesheet"
@@ -236,6 +232,7 @@
                 
           </section>
           <section class="search">
+            <h6 class="none">""</h6>
             <div class="btn-search">
                 <a href="#"><p>Commander</p></a>
                 </div>
