--- a/note-enchanté.html
+++ b/note-enchanté.html
@@ -81,7 +81,7 @@
           <a href="" class="items-menu m-item2">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Caviar osciètre</h3>
+                <h3 class="title-menu">Caviar osciètre</h3>
                 <p class="long-name">Sur blini à la farine de blé noir</p>
               </div>
               <div class="price-icon">
@@ -99,7 +99,7 @@
           <a href="" class="items-menu m-item3">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Homard et espuma de potiron</h3>
+                <h3 class="title-menu">Homard et espuma de potiron</h3>
                 <p class="long-name">Mariné aux zestes d'orange</p>
               </div>
               <div class="price-icon">
@@ -117,7 +117,7 @@
           <a href="" class="items-menu m-item4">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Foie gras de canard cuit entier</h3>
+                <h3 class="title-menu">Foie gras de canard cuit entier</h3>
                 <p class="long-name">Confiture de figue et pain toasté</p>
               </div>
               <div class="price-icon">
@@ -161,7 +161,7 @@
           <a href="" class="items-menu m-item6">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Langoustine poêlée</h3>
+                <h3 class="title-menu">Langoustine poêlée</h3>
                 <p class="long-name">Purée de patate douce</p>
               </div>
               <div class="price-icon">
@@ -179,7 +179,7 @@
           <a href="" class="items-menu m-item7">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Mijoté de queue de boeuf</h3>
+                <h3 class="title-menu">Mijoté de queue de boeuf</h3>
                 <p class="long-name">Et riz sauvage aux zestes de citron</p>
               </div>
               <div class="price-icon">
@@ -225,7 +225,7 @@
           <a href="" class="items-menu m-item9">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Baba au rhum revisité</h3>
+                <h3 class="title-menu">Baba au rhum revisité</h3>
                 <p class="long-name">Avec son coulis de citron</p>
               </div>
               <div class="price-icon">
@@ -243,7 +243,7 @@
           <a href="" class="items-menu m-item10">
             <div class="btn-text-case">
               <div class="name-menu">
-                <h3>Tarte au citron meringuée</h3>
+                <h3 class="title-menu">Tarte au citron meringuée</h3>
                 <p class="long-name">Déstructurée</p>
               </div>
               <div class="price-icon">
